# teleop-utils

./: .gitignore  LICENSE  README.md  conda_environment.yaml  iphone_client.py  iphone_command.py  iphone_controller.py  iphone_server.py  iphone_teleop.py  pyproject.toml  pyrightconfig.json
src/iphone_teleop/: __init__.py  iphone_client.py  iphone_controller.py  iphone_server.py
src/iphone_teleop/templates/: index.html
src/teleop_utils/: __init__.py
src/teleop_utils/iphone/: iphone_client.py  iphone_command.py  iphone_controller.py  iphone_server.py
src/teleop_utils/iphone/static/js/: webxr-button.js
src/teleop_utils/keyboard/: __init__.py  keyboard_client.py  keyboard_server.py
src/teleop_utils/mocap/: __init__.py  calibrate_mocap_timestamp.py  data_descriptions.py  mocap_client.py  mocap_data.py  mocap_server.py  natnet_client.py
src/teleop_utils/mocap/scripts/: calculate_time_difference.py  calibrate_mocap_timestamp.py  interpolate_mocap_poses.py  load_mocap_trajectory.py  record_mocap_trajectory.py
src/teleop_utils/spacemouse/: __init__.py  spacemouse_client.py  spacemouse_server.py
src/teleop_utils/utils/: __init__.py  pose_utils.py
templates/: index.html
wheels/: upload_to_pypi.sh
