[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teleop-utils"
version = "0.1.0"
description = "Teleoperation utilities for Robotics"
authors = [
    {name = "Yihuai Gao", email = "yihuai@stanford.edu"},
]
dependencies = [
    "flask",
    "flask-socketio",
    "numpy",
    "transforms3d",
    "spnav @ https://github.com/cheng-chi/spnav/archive/c1c938ebe3cc542db4685e0d13850ff1abfdb943.tar.gz",
    "click"
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pylint",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["teleop_utils*", "teleop_utils/iphone/*", "teleop_utils/mocap/*", "teleop_utils/spacemouse/*", "teleop_utils/keyboard/*"]
