[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teleop-utils"
version = "0.1.0"
description = "Teleoperation utilities for Robotics"
authors = [
    {name = "Yihuai Gao", email = "yihuai@stanford.edu"},
]
dependencies = [
    "numpy",
    "transforms3d",
    "click"
]

[project.optional-dependencies]
iphone = ["flask","flask-socketio"]
spacemouse = ["spnav @ https://github.com/cheng-chi/spnav/archive/c1c938ebe3cc542db4685e0d13850ff1abfdb943.tar.gz"]
all = ["flask","flask-socketio","spnav @ https://github.com/cheng-chi/spnav/archive/c1c938ebe3cc542db4685e0d13850ff1abfdb943.tar.gz"]

[project.scripts]
spacemouse_server = "src.teleop_utils.spacemouse.spacemouse_server:run_spacemouse_server"
keyboard_server = "src.teleop_utils.keyboard.keyboard_server:run_keyboard_server"
mocap_server = "src.teleop_utils.mocap.mocap_server:run_mocap_server"
iphone_server = "src.teleop_utils.iphone.iphone_server:run_iphone_server"

[tool.setuptools.packages.find]
where = ["src"]
include = ["teleop_utils*", "teleop_utils/iphone/*", "teleop_utils/mocap/*", "teleop_utils/spacemouse/*", "teleop_utils/keyboard/*", "teleop_utils/utils/*"]
